[gd_scene load_steps=30 format=3 uid="uid://b7slmmf6hcf6x"]

[ext_resource type="Texture2D" uid="uid://g6qhpleht7ib" path="res://graphics/Tiny Swords/Resources/Trees/Tree.png" id="1_f8r7q"]
[ext_resource type="Texture2D" uid="uid://be0vt1bakj3co" path="res://graphics/Tiny Swords/Resources/Trees/New Piskel-1.png.png" id="2_b2hky"]
[ext_resource type="Script" path="res://scripts/AudioContainer.gd" id="3_fyise"]
[ext_resource type="AudioStream" uid="uid://caddjnds74wcq" path="res://audio/ressources/hit-wood.mp3" id="4_u23jo"]
[ext_resource type="PackedScene" uid="uid://dg16kvckl1o6e" path="res://scenes/GlobalComponents/health_component.tscn" id="5_n2puf"]
[ext_resource type="PackedScene" uid="uid://ba3gu32fjmfvl" path="res://scenes/GlobalComponents/hurtbox_component.tscn" id="6_x5phr"]
[ext_resource type="Script" path="res://scenes/Objects/Tree/Scripts/States/TreeHurtState.gd" id="7_fa743"]
[ext_resource type="Script" path="res://scripts/FSM/StateMachine.gd" id="7_i1g88"]
[ext_resource type="Script" path="res://scenes/Objects/Tree/Scripts/States/TreeIdleState.gd" id="8_hrva6"]
[ext_resource type="Script" path="res://scenes/Objects/Tree/Scripts/States/TreeSpawn.gd" id="9_cjhqu"]
[ext_resource type="Script" path="res://scripts/AnimationManager.gd" id="10_cwqx2"]
[ext_resource type="Script" path="res://scenes/Objects/Tree/Scripts/States/TreeDeadState.gd" id="10_jt64t"]

[sub_resource type="Curve" id="Curve_row7o"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.634831, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="AtlasTexture" id="AtlasTexture_33tft"]
atlas = ExtResource("1_f8r7q")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiicm"]
atlas = ExtResource("1_f8r7q")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruhyp"]
atlas = ExtResource("1_f8r7q")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_itdc6"]
atlas = ExtResource("1_f8r7q")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeo2t"]
atlas = ExtResource("1_f8r7q")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6wjn"]
atlas = ExtResource("1_f8r7q")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o36kv"]
atlas = ExtResource("1_f8r7q")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7opq"]
atlas = ExtResource("1_f8r7q")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hye3g"]
atlas = ExtResource("1_f8r7q")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_julqp"]
atlas = ExtResource("1_f8r7q")
region = Rect2(576, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_jidfe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33tft")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiicm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruhyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itdc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeo2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6wjn")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o36kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7opq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hye3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_julqp")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eo5nl"]
radius = 8.0
height = 24.0

[sub_resource type="Animation" id="Animation_qa84s"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeAnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.760203, 3.70607e-06, 4.81307e-07, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_t0lxp"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeAnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rlakd"]
_data = {
"RESET": SubResource("Animation_t0lxp"),
"hurt": SubResource("Animation_qa84s")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m3h0u"]
radius = 17.0
height = 50.0

[node name="tree" type="StaticBody2D"]

[node name="LeafCPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
texture = ExtResource("2_b2hky")
emission_shape = 5
emission_points = PackedVector2Array(0, -122.275, 0, -79.81, 0, -27.62)
emission_normals = PackedVector2Array()
emission_colors = PackedColorArray()
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 175.0
angular_velocity_min = 10.0
angular_velocity_max = 180.0
scale_amount_min = 0.7
scale_amount_curve = SubResource("Curve_row7o")

[node name="TreeAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -70)
sprite_frames = SubResource("SpriteFrames_jidfe")
animation = &"hurt"
autoplay = "idle"

[node name="MarkerPivotCenter" type="Node2D" parent="."]
position = Vector2(1, 3)

[node name="Marker2D" type="Marker2D" parent="MarkerPivotCenter"]
position = Vector2(0, -40)

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_eo5nl")

[node name="growth_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TreeAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rlakd")
}

[node name="HealthComponent" parent="." instance=ExtResource("5_n2puf")]
max_health = 3.0

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("6_x5phr")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(1, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_m3h0u")

[node name="AudioContainer" type="Node" parent="."]
script = ExtResource("3_fyise")

[node name="Hurt" type="AudioStreamPlayer2D" parent="AudioContainer"]
stream = ExtResource("4_u23jo")
volume_db = -11.886
pitch_scale = 1.59

[node name="AnimationManager" type="Node" parent="." node_paths=PackedStringArray("animated_sprite", "animation_player", "audio_container")]
script = ExtResource("10_cwqx2")
animated_sprite = NodePath("../TreeAnimatedSprite2D")
animation_player = NodePath("../TreeAnimationPlayer")
audio_container = NodePath("../AudioContainer")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_i1g88")
initial_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("health", "animation_manager")]
script = ExtResource("9_cjhqu")
health = NodePath("../../HealthComponent")
animation_manager = NodePath("../../AnimationManager")

[node name="Idle" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("animation_manager", "health_component", "hurtbox_component")]
script = ExtResource("8_hrva6")
animation_manager = NodePath("../../AnimationManager")
health_component = NodePath("../../HealthComponent")
hurtbox_component = NodePath("../../HurtboxComponent")

[node name="Hurt" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("animation_manager", "particules_player")]
script = ExtResource("7_fa743")
animation_manager = NodePath("../../AnimationManager")
particules_player = NodePath("../../LeafCPUParticles2D")

[node name="Dead" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("animation_manager", "particules_player", "growth_timer", "wood_marker")]
script = ExtResource("10_jt64t")
animation_manager = NodePath("../../AnimationManager")
particules_player = NodePath("../../LeafCPUParticles2D")
growth_timer = NodePath("../../growth_timer")
wood_marker = NodePath("../../MarkerPivotCenter/Marker2D")

[connection signal="timeout" from="growth_timer" to="." method="_on_growth_timer_timeout"]
